monitoring/blackbox/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox
  namespace: monitoring
  labels:
    app: blackbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox
  template:
    metadata:
      labels:
        app: blackbox
    spec:
      containers:
        - name: blackbox
          image: prom/blackbox-exporter
          ports:
            - containerPort: 9115
          livenessProbe:
            httpGet:
              path: /
              port: 9115
              scheme: HTTP
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 9115
              scheme: HTTP
            periodSeconds: 15
          startupProbe:
            failureThreshold: 20
            httpGet:
              path: /
              port: 9115
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              memory: 100Mi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/blackbox_exporter
      volumes:
        - name: config-volume
          configMap:
            name: blackbox-config
