monitoring/blackbox/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: blackbox
  namespace: monitoring
spec:
  selector:
    app: blackbox
  ports:
    - port: 9115
      targetPort: 9115
